--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "name": "mucis-album",
     "builds": [
-        {"src": "./src/index.js", "use": "@vercel/node"}
+        {"src": "*.js", "use": "@vercel/node"}
     ],
     "routes": [
-        {"src": "/(.*)", "dest": "./src/index.js"}
+        {"src": "/(.*)", "dest": "/"}
     ]
 }
