--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "mucis-album",
     "builds": [
-        {"src": "*.js", "use": "@vercel/node"}
+        {"src": "./src/index.js", "use": "@vercel/node"}
     ],
     "routes": [
         {"src": "/(.*)", "dest": "/"}
