--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js -e js",
-    "build": "netlify deploy --prod"
+    "start": "nodemon src/index.js -e js",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
